--- a/versions/1.8/items/items_css.css
+++ b/versions/1.8/items/items_css.css
@@ -169,6 +169,7 @@ span.lever{	background-position: -480px -928px;}
 span.piston{	background-position: -544px -928px;}
 span.redstone_torch{	background-position: -768px -928px;}
 span.stone_button{	background-position: -864px -928px;}
+span.tripwire_hook{	background-position:-960px -928px;}
 span.heavy_weighted_pressure_plate{	background-position: -992px -928px;}
 
 span.creeper_head{	background-position: -96px -960px;}
@@ -436,8 +437,10 @@ span.green_bed{	background-position: -320px -1568px;}
 span.white_bed{	background-position: -608px -1568px;}
 
 span.white_carpet{	background-position: -64px -1632px;}
-span.empty{	background-position: -992px -1664px;}
+
 span.turtle_helmet{	background-position:-512px -1664px;}
+span.kelp_top{	background-position:-576px -1664px;}
+span.empty{	background-position: -992px -1664px;}
 
 span.turtle_spawn_egg{background-image:url("https://d1u5p3l4wpay3k.cloudfront.net/minecraft_zh_gamepedia/9/92/Grid_Spawn_Turtle.png");}
 
