--- a/versions/1.8/items/items_css.css
+++ b/versions/1.8/items/items_css.css
@@ -81,12 +81,27 @@ span.purple_dye{	background-position: -928px -672px;}
 span.rose_red{	background-position: -960px -672px;}
 
 span.black_stained_glass{	background-position: -64px -704px;}
+span.black_stained_glass_pane{	background-position: -96px -704px;}
+span.blue_stained_glass_pane{	background-position: -288px -704px;}
+span.brown_stained_glass_pane{	background-position: -480x -704px;}
+span.cyan_stained_glass_pane{	background-position: -672px -704px;}
+span.gray_stained_glass_pane{	background-position: -864px -704px;}
 
-span.purple_terracotta{	background-position: -736px -736px;}
-span.orange_terracotta{	background-position: -928px -736px;}
+span.green_stained_glass_pane{	background-position: -32px -736px;}
 span.light_blue_stained_glass{	background-position: -192px -736px;}
+span.light_blue_stained_glass_pane{	background-position: -224px -736px;}
+span.light_gray_stained_glass_pane{	background-position: -416px -736px;}
+span.light_green_stained_glass_pane{	background-position: -608px -736px;}
+span.purple_terracotta{	background-position: -736px -736px;}
+span.magenta_stained_glass_pane{	background-position: -800px -736px;}
+span.orange_terracotta{	background-position: -928px -736px;}
+span.orange_stained_glass_pane{	background-position: -992px -736px;}
 
+span.pink_stained_glass_pane{	background-position: -160px -768px;}
+span.purple_stained_glass_pane{	background-position: -352px -768px;}
+span.red_stained_glass_pane{	background-position: -544px -768px;}
 span.white_stained_glass{	background-position: -704px -768px;}
+span.yellow_stained_glass_pane{	background-position: -928px -768px;}
 span.dragon_egg{	background-position: -992px -768px;}
 
 span.end_rod{	background-position: -32px -800px;}
@@ -146,6 +161,7 @@ span.dark_oak_planks{	background-position: -504px -864px;}
 span.oak_fence{	background-position: -704px -864px;}
 span.oak_fence_door{	background-position: -736px -864px;}
 span.glass{	background-position: -768px -864px;}
+span.glass_pane{	background-position: -800px -864px;}
 span.iron_bars{	background-position: -864px -864px;}
 span.jungle_planks{	background-position: -992px -864px;}
 
@@ -554,9 +570,16 @@ span.salmon_head{	background-position: -0px -352px;}
 span.clownfish_head{	background-position: -32px -352px;}
 span.pufferfish_head{	background-position: -64px -352px;}
 span.origin_of_the_world{	background-position: -96px -352px;}
+span.glow_hat{	background-position: -128px -352px;}
+span.jacket{	background-position: -160px -352px;}
+span.snow_boots{	background-position: -192px -352px;}
+span.red_hat{	background-position: -224px -352px;}
+span.red_coat{	background-position: -256px -352px;}
+span.potion_of_reckless{	background-position: -0px -384px;}
+span.potion_of_ninja{	background-position: -32px -384px;}
 
 span.effect{
-	background-image:url(https://d1u5p3l4wpay3k.cloudfront.net/minecraft_zh_gamepedia/b/b7/EffectsCSS.png);
+	background-image:url(items/EffectsCSS.png);
 	width:18px;
 	height:18px;
 	display:inline-block;
@@ -578,5 +601,7 @@ span.night_vision{	background-position: -72px -18px;}
 span.blindness{	background-position: -90px -18px;}
 span.resistance{	background-position: -108px -18px;}
 span.fire_resistance{	background-position: -126px -18px;}
+
+span.water_breathing{	background-position: -0px -36px;}
 
 
