--- a/versions/1.8/items/items_css.css
+++ b/versions/1.8/items/items_css.css
@@ -382,6 +382,7 @@ span.command_block{	background-position: -736px -1216px;}
 span.crafting_table{	background-position: -768px -1216px;}
 span.daylight_detector{	background-position: -800px -1216px;}
 span.dispenser{	background-position: -832px -1216px;}
+span.dropper{	background-position: -864px -1216px;}
 span.enchanting_table{	background-position: -896px -1216px;}
 span.furnace{	background-position: -960px -1216px;}
 span.hopper{	background-position: -992px -1216px;}
