delete test version

--- a/versions/1.8/items/items_css.css
+++ b/versions/1.8/items/items_css.css
@@ -42,7 +42,7 @@ span.leather_helmet{	background-position: -288px -32px;}
 span.leather_leggings{	background-position: -320px -32px;}
 span.leather_chestplate{	background-position: -352px -32px;}
 
-span.cooked_potato{	background-position: -384px -640px;}
+span.baked_potato{	background-position: -384px -640px;}
 span.blaze_powder{	background-position: -416px -640px;}
 span.blaze_rod{	background-position: -448px -640px;}
 span.carrot{	background-position: -480px -640px;}
