--- a/versions/1.8/items/items_css.css
+++ b/versions/1.8/items/items_css.css
@@ -417,7 +417,7 @@ span.shulker_shell{	background-position: -32px -1408px;}
 span.evocation_illager_spawn_egg{	background-position: -64px -1408px;}
 span.llama_spawn_egg{	background-position: -96px -1408px;}
 span.vindication_illager_spawn_egg{	background-position: -160px -1408px;}
-span.undying_totem{	background-position: -192px -1408px;}
+span.totem_of_undying{	background-position: -192px -1408px;}
 span.iron_nugget{	background-position: -896px -1408px;}
 
 span.blaze_head{	background-position: -64px -1440px;}
