Update to m03d23 version add sort chest and random block

--- a/versions/1.8/items/items_css.css
+++ b/versions/1.8/items/items_css.css
@@ -505,15 +505,15 @@ span.coal_helmet{	background-position: -192px -96px;}
 span.redstone_helmet{	background-position: -224px -96px;}
 span.lapis_helmet{	background-position: -256px -96px;}
 span.quartz_helmet{	background-position: -0px -128px;}
-span.emerald_helmet{	background-position: -32px -128px;}
+span.green_hat{	background-position: -32px -128px;}
 span.coal_chestplate{	background-position: -64px -128px;}
 span.redstone_chestplate{	background-position: -96px -128px;}
 span.lapis_chestplate{	background-position: -128px -128px;}
 span.quartz_chestplate{	background-position: -160px -128px;}
 span.emerald_chestplate{	background-position: -192px -128px;}
-span.coal_leggings{	background-position: -224px -128px;}
+span.tight_leather_leggings{	background-position: -224px -128px;}
 span.redstone_leggings{	background-position: -256px -128px;}
-span.lapis_leggings{	background-position: -0px -160px;}
+span.blue_jeans{	background-position: -0px -160px;}
 span.quartz_leggings{	background-position: -32px -160px;}
 span.emerald_leggings{	background-position: -64px -160px;}
 span.coal_boots{	background-position: -96px -160px;}
