--- a/versions/1.8/items/items_css.css
+++ b/versions/1.8/items/items_css.css
@@ -420,9 +420,6 @@ span.vindication_illager_spawn_egg{	background-position: -160px -1408px;}
 span.totem_of_undying{	background-position: -192px -1408px;}
 span.iron_nugget{	background-position: -896px -1408px;}
 
-span.blaze_head{	background-position: -64px -1440px;}
-span.enderman_head{	background-position: -352px -1440px;}
-
 span.black_concrete{	background-position: -64px -1472px;}
 span.black_concrete_powder{	background-position: -96px -1472px;}
 span.black_glazed_terracotta{	background-position: -128px -1472px;}
@@ -456,8 +453,23 @@ span.white_bed{	background-position: -608px -1568px;}
 span.white_carpet{	background-position: -64px -1632px;}
 
 span.turtle_helmet{	background-position:-512px -1664px;}
+span.dried_kelp{	background-position:-544px -1664px;}
 span.kelp_top{	background-position:-576px -1664px;}
-span.empty{	background-position: -992px -1664px;}
+span.scute{	background-position:-608px -1664px;}
+span.clownfish_bucket{	background-position:-640px -1664px;}
+span.cod_bucket{	background-position:-672px -1664px;}
+span.pufferfish_bucket{	background-position:-704px -1664px;}
+span.salmon_bucket{	background-position:-736px -1664px;}
+span.clownfish{	background-position:-768px -1664px;}
+span.cooked_cod{	background-position:-800px -1664px;}
+span.cooked_salmon{	background-position:-832px -1664px;}
+span.pufferfish{	background-position:-864px -1664px;}
+span.cod{	background-position:-896px -1664px;}
+span.salmon{	background-position:-928px -1664px;}
+
+span.trident{	background-position:-608px -1696px;}
+
+span.empty{	background-position: -992px -1728px;}
 
 span.turtle_spawn_egg{background-image:url("https://d1u5p3l4wpay3k.cloudfront.net/minecraft_zh_gamepedia/9/92/Grid_Spawn_Turtle.png");}
 
@@ -468,116 +480,115 @@ span.potato_plant{	background-position: -384px -384px;}
 span.carrot_plant{	background-position: -352px -384px;}
 
 
-span.iron_dust{	background-position: -0px -0px;}
-span.gold_dust{	background-position: -32px -0px;}
-span.carbon_dust{	background-position: -64px -0px;}
-span.quartz_dust{	background-position: -96px -0px;}
-span.diamond_dust{	background-position: -128px -0px;}
-span.emerald_dust{	background-position: -160px -0px;}
-span.bottle_of_redstone{	background-position: -192px -0px;}
-span.lapis_dust{	background-position: -224px -0px;}
-span.stone_dust{	background-position: -256px -0px;}
-span.blaze_dust{	background-position: -0px -32px;}
-span.bottle_of_glowstone_dust{	background-position: -32px -32px;}
-span.gunpowder_dust{	background-position: -64px -32px;}
-span.bionic_acid{	background-position: -96px -32px;}
-span.alkaloid{	background-position: -128px -32px;}
-span.salt{	background-position: -160px -32px;}
-span.rare_earth_salt{	background-position: -192px -32px;}
-span.rare_earth_alkaloid{	background-position: -224px -32px;}
-span.rare_earth{	background-position: -256px -32px;}
-span.bottle_of_air{	background-position: -0px -64px;}
-span.course_silicon{	background-position: -32px -64px;}
-span.silicon_dust{	background-position: -64px -64px;}
-span.potion_haste{	background-position: -96px -64px;}
-span.potion_resistance{	background-position: -128px -64px;}
-span.potion_health_boost{	background-position: -160px -64px;}
-span.potion_saturation{	background-position: -192px -64px;}
-span.dirt_heap{	background-position: -224px -64px;}
-span.sand_heap{	background-position: -256px -64px;}
-span.cobblestone_heap{	background-position: -0px -96px;}
-span.stone_heap{	background-position: -32px -96px;}
-span.abirritant{	background-position: -64px -96px;}
-span.orchid_tea{	background-position: -96px -96px;}
-span.chrysanthemum_tea{	background-position: -128px -96px;}
-span.plant_essence{	background-position: -160px -96px;}
-span.coal_helmet{	background-position: -192px -96px;}
-span.redstone_helmet{	background-position: -224px -96px;}
-span.lapis_helmet{	background-position: -256px -96px;}
-span.quartz_helmet{	background-position: -0px -128px;}
-span.green_hat{	background-position: -32px -128px;}
-span.coal_chestplate{	background-position: -64px -128px;}
-span.redstone_chestplate{	background-position: -96px -128px;}
-span.lapis_chestplate{	background-position: -128px -128px;}
-span.quartz_chestplate{	background-position: -160px -128px;}
-span.emerald_chestplate{	background-position: -192px -128px;}
-span.tight_leather_leggings{	background-position: -224px -128px;}
-span.redstone_leggings{	background-position: -256px -128px;}
-span.blue_jeans{	background-position: -0px -160px;}
-span.quartz_leggings{	background-position: -32px -160px;}
-span.emerald_leggings{	background-position: -64px -160px;}
-span.coal_boots{	background-position: -96px -160px;}
-span.redstone_boots{	background-position: -128px -160px;}
-span.lapis_boots{	background-position: -160px -160px;}
-span.quartz_boots{	background-position: -192px -160px;}
-span.emerald_boots{	background-position: -224px -160px;}
-span.red_force_of_fire{	background-position: -256px -160px;}
-span.orange_force_of_dirt{	background-position: -0px -192px;}
-span.cyan_force_of_mountain{	background-position: -32px -192px;}
-span.green_force_of_water{	background-position: -64px -192px;}
-span.blue_force_of_sky{	background-position: -96px -192px;}
-span.yellow_force_of_earth{	background-position: -128px -192px;}
-span.purple_force_of_wood{	background-position: -160px -192px;}
-span.white_force_of_lightning{	background-position: -192px -192px;}
-span.black_force_of_moon{	background-position: -224px -192px;}
-span.horse_head{	background-position: -256px -192px;}
-span.donkey_head{	background-position: -0px -224px;}
-span.mule_head{	background-position: -32px -224px;}
-span.llama_head{	background-position: -64px -224px;}
-span.polar_bear_head{	background-position: -96px -224px;}
-span.ocelot_head{	background-position: -128px -224px;}
-span.wolf_head{	background-position: -160px -224px;}
-span.zombie_villager_head{	background-position: -192px -224px;}
-span.witch_head{	background-position: -224px -224px;}
-span.spider_head{	background-position: -256px -224px;}
-span.cave_spider_head{	background-position: -0px -256px;}
-span.slime_head{	background-position: -32px -256px;}
-span.husk_head{	background-position: -64px -256px;}
-span.stray_head{	background-position: -96px -256px;}
-span.skeleton_horse_skull{	background-position: -128px -256px;}
-span.guardian_head{	background-position: -160px -256px;}
-span.elder_guardian_head{	background-position: -192px -256px;}
-span.villager_head{	background-position: -224px -256px;}
-span.vindication_illager_head{	background-position: -256px -256px;}
-span.vex_head{	background-position: -0px -288px;}
-span.villager_golem_head{	background-position: -32px -288px;}
-span.snowman_head{	background-position: -64px -288px;}
-span.zombie_pigman_head{	background-position: -96px -288px;}
-span.blaze_head{	background-position: -128px -288px;}
-span.ghast_head{	background-position: -160px -288px;}
-span.magma_cube_head{	background-position: -192px -288px;}
-span.enderman_head{	background-position: -224px -288px;}
-span.shulker_head{	background-position: -256px -288px;}
-span.cow_head{	background-position: -0px -320px;}
-span.pig_head{	background-position: -32px -320px;}
-span.sheep_head{	background-position: -64px -320px;}
-span.mooshroom_head{	background-position: -96px -320px;}
-span.rabbit_head{	background-position: -128px -320px;}
-span.chicken_head{	background-position: -160px -320px;}
-span.parrot_head{	background-position: -192px -320px;}
-span.squid_head{	background-position: -224px -320px;}
-span.cod_head{	background-position: -256px -320px;}
-span.salmon_head{	background-position: -0px -352px;}
-span.clownfish_head{	background-position: -32px -352px;}
-span.pufferfish_head{	background-position: -64px -352px;}
-span.origin_of_the_world{	background-position: -96px -352px;}
-span.glow_hat{	background-position: -128px -352px;}
-span.jacket{	background-position: -160px -352px;}
-span.snow_boots{	background-position: -192px -352px;}
-span.red_hat{	background-position: -224px -352px;}
-span.red_coat{	background-position: -256px -352px;}
-span.potion_of_reckless{	background-position: -0px -384px;}
-span.potion_of_ninja{	background-position: -32px -384px;}
+span.blue_force_of_sky{	background-position: -0px -0px;}
+span.green_force_of_water{	background-position: -32px -0px;}
+span.cyan_force_of_mountain{	background-position: -64px -0px;}
+span.orange_force_of_dirt{	background-position: -96px -0px;}
+span.yellow_force_of_earth{	background-position: -128px -0px;}
+span.red_force_of_fire{	background-position: -160px -0px;}
+span.purple_force_of_wood{	background-position: -192px -0px;}
+span.white_force_of_lightning{	background-position: -224px -0px;}
+span.black_force_of_moon{	background-position: -256px -0px;}
+
+span.iron_dust{	background-position: -0px -32px;}
+span.gold_dust{	background-position: -32px -32px;}
+span.carbon_dust{	background-position: -64px -32px;}
+span.quartz_dust{	background-position: -96px -32px;}
+span.diamond_dust{	background-position: -128px -32px;}
+span.emerald_dust{	background-position: -160px -32px;}
+span.lapis_dust{	background-position: -192px -32px;}
+span.bottle_of_salt{	background-position: -224px -32px;}
+span.steel_dust{	background-position: -256px -32px;}
+
+span.bionic_acid{	background-position: -0px -32px;}
+span.alkaloid{	background-position: -32px -32px;}
+span.rare_earth_salt{	background-position: -64px -32px;}
+span.rare_earth_dust{	background-position: -96px -32px;}
+span.alkaloid_rare_earth{	background-position: -128px -32px;}
+span.bottle_of_air{	background-position: -160px -64px;}
+span.course_silicon{	background-position: -192px -64px;}
+span.silicon_dust{	background-position: -224px -64px;}
+span.elder_s_words{	background-position: -256px -64px;}
+
+span.sakura_wand{	background-position: -0px -96px;}
+span.magicka_wand{	background-position: -32px -96px;}
+span.compressor{	background-position: -64px -96px;}
+span.origin_of_the_world{	background-position: -96px -96px;}
+span.magnet{	background-position: -128px -96px;}
+span.time_conditioner{	background-position: -160px -96px;}
+span.time_checker{	background-position: -192px -96px;}
+span.farm_core{	background-position: -224px -96px;}
+span.wart_core{	background-position: -256px -96px;}
+
+span.forestry_core{	background-position: -0px -128px;}
+span.ranch_core{	background-position: -32px -128px;}
+span.fishery_core{	background-position: -64px -128px;}
+span.hunting_core{	background-position: -96px -128px;}
+span.break_hand{	background-position: -128px -128px;}
+span.nurse_hat{	background-position: -160px -128px;}
+span.black_hat{	background-position: -192px -128px;}
+span.glow_hat{	background-position: -224px -128px;}
+span.green_hat{	background-position: -256px -128px;}
+
+span.red_hat{	background-position: -0px -160px;}
+span.red_coat{	background-position: -32px -160px;}
+span.jacket{	background-position: -64px -160px;}
+span.blue_jeans{	background-position: -96px -160px;}
+span.tight_leather_leggings{	background-position: -128px -160px;}
+span.snow_boots{	background-position: -160px -160px;}
+span.potion_of_reckless{	background-position: -192px -160px;}
+span.potion_of_ninja{	background-position: -224px -160px;}
+span.horse_head{	background-position: -256px -160px;}
+
+span.blaze_head{	background-position: -0px -192px;}
+span.cave_spider_head{	background-position: -32px -192px;}
+span.chicken_head{	background-position: -64px -192px;}
+span.cow_head{	background-position: -96px -192px;}
+span.donkey_head{	background-position: -128px -192px;}
+span.elder_guardian_head{	background-position: -160px -192px;}
+span.enderman_head{	background-position: -192px -192px;}
+span.ghast_head{	background-position: -224px -192px;}
+span.guardian_head{	background-position: -256px -192px;}
+
+span.pufferfish_head{	background-position: -0px -224px;}
+span.stray_head{	background-position: -32px -224px;}
+span.villager_golem_head{	background-position: -64px -224px;}
+span.llama_head{	background-position: -96px -224px;}
+span.magma_cube_head{	background-position: -128px -224px;}
+span.mule_head{	background-position: -160px -224px;}
+span.mooshroom_head{	background-position: -192px -224px;}
+span.ocelot_head{	background-position: -224px -224px;}
+span.ocelot_head2{	background-position: -256px -224px;}
+
+span.parrot_head{	background-position: -0px -256px;}
+span.parrot_head2{	background-position: -32px -256px;}
+span.parrot_head3{	background-position: -64px -256px;}
+span.pig_head{	background-position: -96px -256px;}
+span.polar_bear_head{	background-position: -128px -256px;}
+span.rabbit_head{	background-position: -160px -256px;}
+span.sheep_head{	background-position: -192px -256px;}
+span.shulker_head{	background-position: -224px -256px;}
+span.skeleton_horse_skull{	background-position: -256px -256px;}
+
+span.slime_head{	background-position: -0px -288px;}
+span.snowman_head{	background-position: -32px -288px;}
+span.spider_head{	background-position: -64px -288px;}
+span.squid_head{	background-position: -96px -288px;}
+span.stray_head{	background-position: -128px -288px;}
+span.vex_head{	background-position: -160px -288px;}
+span.villager_head{	background-position: -192px -288px;}
+span.vindication_illager_head{	background-position: -224px -288px;}
+span.witch_head{	background-position: -256px -288px;}
+
+span.wolf_head{	background-position: -0px -352px;}
+span.zombie_pigman_head{	background-position: -32px -352px;}
+span.zombie_villager_head{	background-position: -64px -352px;}
+span.zombie_villager_head2{	background-position: -96px -352px;}
+span.zombie_villager_head3{	background-position: -128px -352px;}
+span.zombie_villager_head4{	background-position: -160px -352px;}
+span.cod_head{	background-position: -192px -352px;}
+span.salmon_head{	background-position: -224px -352px;}
+span.clownfish_head{	background-position: -256px -352px;}
 
 span.effect{
 	background-image:url(items/EffectsCSS.png);
