--- a/versions/1.8/items/items_css.css
+++ b/versions/1.8/items/items_css.css
@@ -100,7 +100,7 @@ span.orange_stained_glass_pane{	background-position: -992px -736px;}
 span.pink_stained_glass_pane{	background-position: -160px -768px;}
 span.purple_stained_glass_pane{	background-position: -352px -768px;}
 span.red_stained_glass_pane{	background-position: -544px -768px;}
-span.white_stained_glass{	background-position: -704px -768px;}
+span.white_stained_glass_pane{	background-position: -736px -768px;}
 span.yellow_stained_glass_pane{	background-position: -928px -768px;}
 span.dragon_egg{	background-position: -992px -768px;}
 
