--- a/items/items_css.css
+++ b/items/items_css.css
@@ -619,13 +619,13 @@ span.the_last_supper{	background-position: -0px -416px;}
 span.luoxia_guwu{	background-position: -32px -416px;}
 span.bamboo_and_stone{	background-position: -64px -416px;}
 span.sunflower{	background-position: -96px -416px;}
-span.soleil_levant{	background-position: -128px -416px;}
+span.impression_soleil_levant{	background-position: -128px -416px;}
 span.monet_in_garden{	background-position: -160px -416px;}
 span.virgin_of_the_rocks{	background-position: -192px -416px;}
 span.the_creation_of_adam{	background-position: -224px -416px;}
 span.barge_haulers_on_the_volga{	background-position: -256px -416px;}
 
-span.founding_ceremony{	background-position: -0px -448px;}
+span.the_founding_ceremony_of_the_nation{	background-position: -0px -448px;}
 span.the_unknown_girl{	background-position: -32px -448px;}
 span.the_starry_night{	background-position: -64px -448px;}
 span.liberty_leading_the_people{	background-position: -96px -448px;}
