修复各色机器的漏洞 修复黑暗仪式错误 修复磨制燧石的错误 使用临时替代方案解决连锁药水生存模式不生效的bug 为膜法少女进度添加了物品奖励 坐标记录仪现在不依赖玩家且可以修改保存的坐标 连锁效果现在支持精准采集和时运了

--- a/items/items_css.css
+++ b/items/items_css.css
@@ -248,6 +248,9 @@ h4{
 p{
 	margin-top:0;
 }
+p.small{
+	font-size:80%;
+}
 code{
 	font-size:100%;
 	background-color:white;
@@ -503,7 +506,7 @@ span.granite{	background-position: -608px -960px;}
 span.grass_block{	background-position: -640px -960px;}
 span.gravel{	background-position: -672px -960px;}
 span.ice{	background-position: -736px -960px;}
-span.mob_spawner{	background-position: -768px -960px;}
+span.spawner{	background-position: -768px -960px;}
 span.mycelium{	background-position: -864px -960px;}
 span.obsidian{	background-position: -896px -960px;}
 span.packed_ice{	background-position: -928px -960px;}
