修复连锁的错误 修复进度条名称的错误 修复解压缩后无法堆叠的错误 修复傀儡农民的错误

--- a/items/items_css.css
+++ b/items/items_css.css
@@ -216,11 +216,11 @@ nav a{
 	display: block;
 }
 article{
-	padding:0.5em 2em 1em;
+	padding:0.5em 2em 0.5em;
 	background-color:#eee;
 }
 footer{
-	margin:20px auto;
+	margin:10px auto 5px;
 }
 footer p{
 	text-align:center;
