二级作物的种子掉落固定为1个 修复了仪式玩家朝向发生改变的问题 修复了仪式中默认属性错误 修复了钓鱼的海洋之心错误 修复机器高温高压模式消耗经验错误 修复附魔之瓶存储经验值改变时机器消耗经验未随之改变的错误 为世界之源失效情形做了改进

--- a/items/items_css.css
+++ b/items/items_css.css
@@ -188,7 +188,10 @@ body{
 }
 nav{
 	position:fixed;
+	width:80%;
 	top:0;
+	left:0;
+	right:0;
 	background-color: #ccccff;
 	margin: 0 auto;
 	z-index:5;
@@ -225,6 +228,9 @@ footer{
 footer p{
 	text-align:center;
 	font-size:85%;
+}
+footer img{
+	height:30px;
 }
 h1{
 	text-align:center;
@@ -914,6 +920,7 @@ span.potion_of_tide{	background-position: -128px -352px;}
 span.potion_of_invulnerable{	background-position: -160px -352px;}
 span.cold_drink{	background-position: -192px -352px;}
 span.beethoven{	background-position: -224px -352px;}
+span.bauhinia{	background-position: -256px -352px;}
 
 
 
