--- a/items/items_css.css
+++ b/items/items_css.css
@@ -826,7 +826,7 @@ span.black_force_of_moon{	background-position: -256px -32px;}
 
 span.crafting_machine{	background-position: -0px -64px;}
 span.all_in_one_machine{	background-position: -32px -64px;}
-span.recipe_shower{	background-position: -64px -64px;}
+span.mob_projector{	background-position: -64px -64px;}
 span.trade_machine{	background-position: -96px -64px;}
 span.empty_plugin{	background-position: -128px -64px;}
 span.low_pressure_plugin{	background-position: -160px -64px;}
