--- a/items/items_css.css
+++ b/items/items_css.css
@@ -958,6 +958,8 @@ span.nurse_hat{	background-position: -96px -416px;}
 span.red_hat{	background-position: -128px -416px;}
 span.beacon_enhancer{	background-position: -160px -416px;}
 span.golden_anvil{	background-position: -192px -416px;}
+span.classical_painting{	background-position: -224px -416px;}
+span.shooting_star{	background-position: -256px -416px;}
 
 
 span.effect{
