--- a/items/items_css.css
+++ b/items/items_css.css
@@ -956,7 +956,7 @@ span.tropical_fish_bucket{	background-position:-640px -1664px;}
 span.cod_bucket{	background-position:-672px -1664px;}
 span.pufferfish_bucket{	background-position:-704px -1664px;}
 span.salmon_bucket{	background-position:-736px -1664px;}
-span.clownfish{	background-position:-768px -1664px;}
+span.tropical_fish{	background-position:-768px -1664px;}
 span.cooked_cod{	background-position:-800px -1664px;}
 span.cooked_salmon{	background-position:-832px -1664px;}
 span.pufferfish{	background-position:-864px -1664px;}
