--- a/items/items_css.css
+++ b/items/items_css.css
@@ -114,6 +114,7 @@
 	background-color:#8B8B8B;
 	border:2px solid;
 	border-color:#5B5B5B #DBDBDB #DBDBDB #5B5B5B;
+	vertical-align:middle;
 }
 .single{
 	height:32px;
@@ -232,16 +233,16 @@
 	top:120px; left:314px;
 }
 
-.caul{
-	height:88px;
-	width:168px;
-	background-image:url("gui/caul.png");
+.onetoone{
+	height:38px;
+	width:134px;
+	background-image:url("gui/onetoone.png");
 }
-.caul > span:nth-child(1){
-	top:25px; left:21px;
+.onetoone > span:nth-child(1){
+	top:3px; left:3px;
 }
-.caul > span:nth-child(2){
-	top:25px; left:117px;
+.onetoone > span:nth-child(2){
+	top:3px; left:99px;
 }
 
 .adv td > span{
@@ -598,7 +599,7 @@ span.cooked_rabbit{	background-position: -928px -800px;}
 
 span.egg{	background-position: -0px -832px;}
 span.golden_apple{	background-position: -32px -832px;}
-span.melon{	background-position: -64px -832px;}
+span.melon_slice{	background-position: -64px -832px;}
 span.mushroom_stew{	background-position: -96px -832px;}
 span.pufferfish{	background-position: -128px -832px;}
 span.beef{	background-position: -224px -832px;}
@@ -722,7 +723,7 @@ span.jungle_sapling{	background-position: -608px -1024px;}
 span.jungle_log{	background-position: -640px -1024px;}
 span.lilac{	background-position: -704px -1024px;}
 span.lily_pad{	background-position: -736px -1024px;}
-span.melon_block{	background-position: -768px -1024px;}
+span.melon{	background-position: -768px -1024px;}
 span.melon_seeds{	background-position: -800px -1024px;}
 span.oak_leaves{	background-position: -864px -1024px;}
 span.oak_sapling{	background-position: -896px -1024px;}
@@ -947,6 +948,7 @@ span.lime_carpet{	background-position: -896px -1600px;}
 
 span.white_carpet{	background-position: -64px -1632px;}
 
+span.dried_kelp_block{	background-position:-128px -1664px;}
 span.pumpkin{	background-position:-352px -1664px;}
 span.turtle_helmet{	background-position:-512px -1664px;}
 span.dried_kelp{	background-position:-544px -1664px;}
@@ -981,6 +983,7 @@ span.cornflower{	background-position: -640px -2368px;}
 span.lily_of_the_valley{	background-position: -640px -2368px;}
 span.suspicious_stew{	background-position: -928px -2368px;}
 
+span.barrel{	background-position: -64px -2432px;}
 span.sweet_berries{	background-position: -768px -2432px;}
 
 span.empty{	background-position: -992px -2432px;}
@@ -1369,9 +1372,13 @@ span.catalytic_wind{	background-position: -256px -1184px;}
 
 span.catalytic_fire{	background-position: -0px -1216px;}
 span.catalytic_thunder{	background-position: -32px -1216px;}
-span.catalytic_rain{	background-position: -64px -1216px;}
-span.catalytic_spirit{	background-position: -96px -1216px;}
+span.catalytic_spirit{	background-position: -64px -1216px;}
+span.catalytic_rain{	background-position: -96px -1216px;}
 span.catalytic_earth{	background-position: -128px -1216px;}
+span.portable_crafting_machine{	background-position: -160px -1216px;}
+
+
+
 
 span.effects{
 	display:inline-block;
