--- a/items/items_css.css
+++ b/items/items_css.css
@@ -1376,6 +1376,9 @@ span.catalytic_spirit{	background-position: -64px -1216px;}
 span.catalytic_rain{	background-position: -96px -1216px;}
 span.catalytic_earth{	background-position: -128px -1216px;}
 span.portable_crafting_machine{	background-position: -160px -1216px;}
+span.bedsheet01{	background-position: -192px -1216px;}
+span.bedsheet02{	background-position: -224px -1216px;}
+span.bedsheet03{	background-position: -256px -1216px;}
 
 
 
