--- a/items/items_css.css
+++ b/items/items_css.css
@@ -1385,6 +1385,7 @@ span.spring_festival_decorations{	background-position: -32px -1248px;}
 span.santa_gift{	background-position: -64px -1248px;}
 span.vindicator_head{	background-position: -96px -1248px;}
 span.potion_of_fat{	background-position: -128px -1248px;}
+span.firecrackers{	background-position: -160px -1248px;}
 
 
 span.effects{
@@ -1424,5 +1425,3 @@ span.luck{	background-position: -90px -36px;}
 span.unluck{	background-position: -108px -36px;}
 span.health_boost{	background-position: -126px -36px;}
 span.saturation{	background-position: -180px -36px;}
-
-
