--- a/items/items_css.css
+++ b/items/items_css.css
@@ -538,7 +538,7 @@ span.ink_sac{	background-position: -672px -672px;}
 span.lapis_lazuli{	background-position: -704px -672px;}
 span.light_blue_dye{	background-position: -736px -672px;}
 span.light_gray_dye{	background-position: -768px -672px;}
-span.lime_green_dye{	background-position: -800px -672px;}
+span.lime_dye{	background-position: -800px -672px;}
 span.magenta_dye{	background-position: -832px -672px;}
 span.orange_dye{	background-position: -864px -672px;}
 span.pink_dye{	background-position: -896px -672px;}
