--- a/items/items_css.css
+++ b/items/items_css.css
@@ -1386,6 +1386,7 @@ span.santa_gift{	background-position: -64px -1248px;}
 span.vindicator_head{	background-position: -96px -1248px;}
 span.potion_of_fat{	background-position: -128px -1248px;}
 span.firecrackers{	background-position: -160px -1248px;}
+span.glass_sign{	background-position: -192px -1248px;}
 
 
 span.effects{
