--- a/items/items_css.css
+++ b/items/items_css.css
@@ -1376,9 +1376,9 @@ span.catalytic_spirit{	background-position: -64px -1216px;}
 span.catalytic_rain{	background-position: -96px -1216px;}
 span.catalytic_earth{	background-position: -128px -1216px;}
 span.portable_crafting_machine{	background-position: -160px -1216px;}
-span.bedsheet01{	background-position: -192px -1216px;}
-span.bedsheet02{	background-position: -224px -1216px;}
-span.bedsheet03{	background-position: -256px -1216px;}
+span.character01{	background-position: -192px -1216px;}
+span.character02{	background-position: -224px -1216px;}
+span.character03{	background-position: -256px -1216px;}
 
 span.compress_craft_machine{	background-position: -0px -1248px;}
 span.spring_festival_decorations{	background-position: -32px -1248px;}
@@ -1410,9 +1410,25 @@ span.splash_potion_of_life{	background-position: -192px -1312px;}
 span.lingering_potion_of_life{	background-position: -224px -1312px;}
 span.potion_of_haste{	background-position: -256px -1312px;}
 
-span.potion_of_resistance{	background-position: -0px -1280px;}
-span.potion_of_tide{	background-position: -32px -1280px;}
-span.potion_of_chain{	background-position: -64px -1280px;}
+span.potion_of_resistance{	background-position: -0px -1344px;}
+span.potion_of_tide{	background-position: -32px -1344px;}
+span.potion_of_chain{	background-position: -64px -1344px;}
+span.character04{	background-position: -96px -1344px;}
+span.character05{	background-position: -128px -1344px;}
+span.character06{	background-position: -160px -1344px;}
+span.character07{	background-position: -192px -1344px;}
+span.character08{	background-position: -224px -1344px;}
+span.character09{	background-position: -256px -1344px;}
+
+span.character10{	background-position: -0px -1376px;}
+span.character11{	background-position: -32px -1376px;}
+span.character12{	background-position: -64px -1376px;}
+span.character13{	background-position: -96px -1376px;}
+span.character14{	background-position: -128px -1376px;}
+span.character15{	background-position: -160px -1376px;}
+span.character16{	background-position: -192px -1376px;}
+span.character17{	background-position: -224px -1376px;}
+span.character18{	background-position: -256px -1376px;}
 
 
 span.effects{
